# GossipProtocol

./: .gitignore  Application  Application.cpp  CMakeLists.txt  MP1Node.cpp  MP1Node.h  MP2Node.cpp  MP2Node.h  README.md
